// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButtonGroup Matches snapshot (desktop) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 button:first-child {
  border-radius: var(--border-radius) 0 0 var(--border-radius);
}

.c0 button:last-child {
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid;
  border-color: #878F9A;
  border-right: 0;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-2x);
}

.c1:last-child {
  border-right: 1px solid #878F9A;
  margin: 0;
}

.c1:focus {
  z-index: 1;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #60666E;
  color: #000000;
}

.c1:hover + button {
  border-left-color: #60666E;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0F0F9;
  border: 1px solid;
  border-color: #012639;
  border-right: 1px solid;
  box-sizing: border-box;
  color: #012639;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-2x);
}

.c2 + button {
  border-left: 0;
}

.c2:last-child {
  border-right: 1px solid #012639;
  margin: 0;
}

.c2:focus {
  z-index: 1;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

<div
  aria-label="Test4"
  class="c0"
  role="group"
>
  <button
    aria-label="Option 1"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-0"
    type="button"
    value="option1"
  >
    Option 1
  </button>
  <button
    aria-label="Option 2"
    aria-pressed="true"
    class="c2"
    data-testid="test-toggle-button-1"
    type="button"
    value="option2"
  >
    Option 2
  </button>
  <button
    aria-label="Option 3"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-2"
    type="button"
    value="option3"
  >
    Option 3
  </button>
  <button
    aria-label="Option 4"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-3"
    type="button"
    value="option4"
  >
    Option 4
  </button>
</div>
`;

exports[`ToggleButtonGroup Matches snapshot (mobile) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 button:first-child {
  border-radius: var(--border-radius) 0 0 var(--border-radius);
}

.c0 button:last-child {
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid;
  border-color: #878F9A;
  border-right: 0;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  font-size: 1rem;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  min-height: var(--size-3x);
  padding: 0 var(--spacing-2x);
}

.c1:last-child {
  border-right: 1px solid #878F9A;
  margin: 0;
}

.c1:focus {
  z-index: 1;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #60666E;
  color: #000000;
}

.c1:hover + button {
  border-left-color: #60666E;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0F0F9;
  border: 1px solid;
  border-color: #012639;
  border-right: 1px solid;
  box-sizing: border-box;
  color: #012639;
  cursor: pointer;
  font-size: 1rem;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  min-height: var(--size-3x);
  padding: 0 var(--spacing-2x);
}

.c2 + button {
  border-left: 0;
}

.c2:last-child {
  border-right: 1px solid #012639;
  margin: 0;
}

.c2:focus {
  z-index: 1;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

<div
  aria-label="Test4"
  class="c0"
  role="group"
>
  <button
    aria-label="Option 1"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-0"
    type="button"
    value="option1"
  >
    Option 1
  </button>
  <button
    aria-label="Option 2"
    aria-pressed="true"
    class="c2"
    data-testid="test-toggle-button-1"
    type="button"
    value="option2"
  >
    Option 2
  </button>
  <button
    aria-label="Option 3"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-2"
    type="button"
    value="option3"
  >
    Option 3
  </button>
  <button
    aria-label="Option 4"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-3"
    type="button"
    value="option4"
  >
    Option 4
  </button>
</div>
`;
